# python-project-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  {% if cookiecutter.license=="GPLv3" %}LICENSE{% endif %}
